# pypi-package-stats

./: CHANGELOG.md  CLI.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  RELEASE.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  cli-guide.md  index.md
pypipackagestats/: __init__.py  api.py  cli.py  constants.py  formatters.py  processor.py  service.py  utils.py
pypipackagestats/cli/: __init__.py  _app.py  formatters.py  metadata.py  utils.py
pypipackagestats/core/: __init__.py  cache.py  client.py  constants.py  exceptions.py  metadata.py  models.py  processing.py  service.py
pypipackagestats/data/: __init__.py  extractors.py  processors.py
pypipackagestats/output/: __init__.py  formatters.py  utils.py
tests/: conftest.py
tests/fixtures/sample_data/: overall_stats.json  package_info.json  python_stats.json  recent_stats.json  system_stats.json
tests/unit/: __init__.py  test_cache.py  test_client.py  test_processing.py  test_utils.py
