[project]
name = "pypi-package-stats"
version = "0.1.0"
description = "Comprehensive PyPI package information CLI tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "diskcache>=5.6.0",
    "platformdirs>=3.0.0",
    "nestedutils==1.0.1",
]

[project.scripts]
pypi-package-stats = "pypipackagestats.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pypipackagestats"]
