[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-package-stats"
version = "1.1.0"
description = "A CLI for PyPI package stats and download analytics, built on the official pypistats API. Fetch daily, weekly, monthly, and 180-day downloads, Python version and OS breakdowns, package metadata, with flexible output (JSON or Rich console tables) and smart disk caching."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "ysskrishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
keywords = [
    "pypi",
    "pypi-stats",
    "pypi-downloads",
    "package-stats",
    "package-metrics",
    "download-stats",
    "pypistats",
    "package-metadata",
    "python-versions",
    "os-distribution",
    "cli",
    "pypi-api",
    "download-analytics",
    "package-analytics",
    "disk-caching",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "diskcache>=5.6.0",
    "platformdirs>=3.0.0",
    "nestedutils==1.0.1",
    "tomli>=2.1.0; python_version < '3.11'",
]

[project.scripts]
pypi-package-stats = "pypipackagestats.cli:main"

[project.urls]
Homepage = "https://github.com/ysskrishna/pypi-package-stats"
Documentation = "https://github.com/ysskrishna/pypi-package-stats#readme"
Repository = "https://github.com/ysskrishna/pypi-package-stats.git"
Issues = "https://github.com/ysskrishna/pypi-package-stats/issues"

[tool.hatch.build.targets.wheel]
packages = ["pypipackagestats"]

[tool.internalurls]
author_username = "ysskrishna"
author_name = "Y. Siva Sai Krishna"
author_github = "https://github.com/ysskrishna"
author_linkedin = "https://linkedin.com/in/ysskrishna"
